error fixed , order and admin section done, now start working with promocode

--- a/src/Components/Admin/Admin.css
+++ b/src/Components/Admin/Admin.css
@@ -1,6 +1,9 @@
-#addProduct , #makeAdmin, #allProduct{
+#Products{
     display: none;
 }
+/* #add-Products, #all-Products{
+    display: none !important;
+} */
 #cencel,#pending,#confirm{
     background-color: white;
 }
