--- a/src/Components/Admin/Admin.css
+++ b/src/Components/Admin/Admin.css
@@ -1,9 +1,17 @@
 #Products,#promotions,#promotionsSubmenu{
     display: none;
 }
-/* #add-Products, #all-Products{
-    display: none !important;
-} */
+#sidebar p, #sidebar span{
+    cursor: pointer;
+}
+#sidebar p:hover {
+    color: blue;
+    font-weight: bold;
+}
+.span1:hover,.span2:hover{
+    color: blue;
+    font-weight: bold;
+}
 #cencel,#pending,#confirm{
     background-color: white;
 }
